--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -1,16 +1,14 @@
 {% set claimantName = claim.claimData.claimant.name %}
 
-<p>{{ t('If {{ claimantName }} accepts your defence the claim will be cancelled.', { claimantName: claimantName }) | safe }}</p>
-<p>{{ t('If they reject your response the court will review the case. You might have to go to a hearing.') }}</p>
+<h2 class="heading-small">{{ t('If you agreed to try mediation') }}</h2>
+
+<p>{{ t('We’ll ask {{ claimantName }} if they want to try mediation.', { claimantName: claimantName }) | safe }}</p>
+<p>{{ t('If they agree we’ll contact you to arrange an appointment. If not, we’ll tell you what to do.') }}</p>
+
+<h2 class="heading-small">{{ t('If you chose not to try mediation') }}</h2>
+<p>{{ t('We’ll contact you to tell you what to do.') }}</p>
 
 <h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
 <p>{{ t('You can still <a href="{{ link }}">settle the claim out of court</a>. For example you could offer to repair goods you sold the claimant or suggest a payment.',
     { link: OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
 <p>{{ t('You can avoid getting a County Court Judgment if the claimant accepts your offer.') }}</p>
-
-{% if claim.response.freeMediation === YesNoOption.YES.option %}
-  <h2 class="heading-medium">{{ t('Mediation') }}</h2>
-  <p>{{ t('You have chosen to use the free mediation service to resolve the dispute with {{ claimantName }}. We’ll ask them if they want to mediate.', { claimantName: claimantName  }) }}</p>
-  <p>{{ t('If they agree to mediation we’ll email you to arrange an appointment.') }}</p>
-  <p>{{ t('If you can reach an agreement with {{ claimantName }} you won’t need to go to a hearing.', { claimantName: claimantName  }) }}</p>
-{% endif %}
