--- a/src/main/features/claim/views/check-and-send.njk
+++ b/src/main/features/claim/views/check-and-send.njk
@@ -7,7 +7,7 @@
 {% from "evidenceCheckAndSend.njk" import evidenceCheckAndSend %}
 {% from "party/details.njk" import partyDetailsSummaryFragment %}
 
-{% set heading = 'Check your answers before submitting your claim' %}
+{% set heading = 'Check your answers' %}
 
 {% block content %}
   <form novalidate method="post">
