--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -3,7 +3,7 @@
 {% from "table.njk" import tableStart, tableEnd, row, rowWithMultipleValue %}
 {% from "form.njk" import csrfProtection, submitButton, errorSummary %}
 
-{% set heading = 'Check your answers before submitting your response' %}
+{% set heading = 'Check your answers' %}
 
 {% block content %}
   <form novalidate method="post">
