--- a/src/main/views/macro/timelineFragment.njk
+++ b/src/main/views/macro/timelineFragment.njk
@@ -45,7 +45,7 @@
     <div class="multiline-headings">
       <div class="multiline-column-1">
         <label class="form-label-bold">{{ t('Date') }}</label>
-        <span class="form-hint">{{ t('For example, {{ oneMonthAgo }}', {oneMonthAgo: 'now' | addDays(-30) | date}) }}</span>
+        <span class="form-hint">{{ t('For example, {{ sixMonthAgo }}', {sixMonthAgo: 'now' | addDays(-180) | date}) }}</span>
       </div>
       <div class="multiline-column-2">
         <label class="form-label-bold">{{ t('What happened') }}</label>
