--- a/src/main/features/ccj/views/repayment-plan.njk
+++ b/src/main/features/ccj/views/repayment-plan.njk
@@ -27,7 +27,7 @@
           <fieldset>
             <legend class="visually-hidden">{{ t('Date for first payment') }}</legend>
             {{ dateInput('firstPaymentDate', form,
-            hint = t('For example, {{ nextMonth }}', {nextMonth = 'now' | addDays(30) | dateInput}),
+            hint = t('For example, {{ nextMonth }}', {nextMonth : 'now' | addDays(30) | dateInput}),
             label = 'Date for first payment') }}
           </fieldset>
         </div>
