--- a/src/main/features/response/views/confirmation/full-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/full-admission-steps.njk
@@ -8,7 +8,10 @@
 {% endif %}
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-  <p>{{ t('If {{ claimantName }} accepts your offer to pay, you need to <a href="{{ link }}">contact them for payment details</a> and to arrange payment.', { claimantName: claimantName, link: claimantDetailsPageURI }) | safe }}</p>
+  <p>{{ t('If {{ claimantName }} accepts your offer to pay, you need to '
+    + internalLink('contact them for payment details ', claimantDetailsPageURI) + ' and to arrange payment.',
+    { claimantName: claimantName, claimantDetailsPageURI: claimantDetailsPageURI }) | safe }}
+  </p>
 
   <p>{{ t('If they reject your offer to pay by a set date then the court will decide how you must pay.') }}</p>
 
@@ -20,8 +23,10 @@
 
   <ul class="list list-bullet">
     <li>{{ t('set up your repayment plan to begin when you said it would') }}</li>
-    <li>{{ t('<a href="{{ link }}">contact {{ claimantName }}</a> if you need their payment details', { claimantName: claimantName, link: claimantDetailsPageURI }) | safe }}</li>
-    <li>{{ t(internalLink(claimantName, claimantDetailsPageURI) + 'if you need their payment details', { claimantName: claimantName, link: claimantDetailsPageURI }) | safe }}</li>
+    <li>
+      {{ t(internalLink('Contact ' + claimantName, claimantDetailsPageURI) + 'if you need their payment details.',
+      { claimantName: claimantName, link: claimantDetailsPageURI }) | safe }}
+    </li>
     <li>{{ t('make sure you get a receipt for any payments') }}</li>
   </ul>
 
