--- a/src/main/features/dashboard/views/contact-them.njk
+++ b/src/main/features/dashboard/views/contact-them.njk
@@ -11,53 +11,19 @@
   {% set phone = claim.response.defendant.mobilePhone %}
   {% set email = claim.claimData.defendant.email %}
   {% set contactPerson = claim.response.defendant.name %}
-  {% set address = claim.claimData.defendant.address %}
-  {% set correspondenceAddress = claim.response.defendant.correspondenceAddress %}
+  {% set address = claim.response.defendant.address if claim.response.defendant.address else claim.claimData.defendant.address   %}
+  {% set correspondenceAddress = claim.response.defendant.correspondenceAddress if claim.response.defendant.correspondenceAddress else claim.claimData.defendant.correspondenceAddress %}
   {% set contactPerson = claim.response.defendant.contactPerson %}
 
-   {#TODO WIP -The address of the defendant does not update if altered, however correspondenceAddress is.#}
-
-  {% if address != null %}
-    {% set line1 = claim.claimData.defendant.address.line1 %}
-    {% set line2 = claim.claimData.defendant.address.line2 %}
-    {% set line3 = claim.claimData.defendant.address.line3 %}
-    {% set city = claim.claimData.defendant.address.city %}
-    {% set postcode = claim.claimData.defendant.address.postcode %}
-  {% endif %}
-
-  {% if correspondenceAddress != null %}
-    {% set correspondenceAddressLine1 = claim.response.defendant.correspondenceAddress.line1 %}
-    {% set correspondenceAddressLine2 = claim.response.defendant.correspondenceAddress.line2 %}
-    {% set correspondenceAddressLine3 = claim.response.defendant.correspondenceAddress.line3 %}
-    {% set correspondenceAddressCity = claim.response.defendant.correspondenceAddress.city %}
-    {% set correspondenceAddressPostcode = claim.response.defendant.correspondenceAddress.postcode %}
-  {% endif %}
-
-  {% elif user.id === claim.defendantId %}
-    {% set otherParty = 'Claimant' %}
-    {% set otherPartyLowerCase = 'claimant' %}
-    {% set otherPartyName = claim.claimData.claimant.name %}
-    {% set phone = claim.claimData.claimant.mobilePhone %}
-    {% set email = claim.claimantEmail %}
-    {% set address = claim.claimData.claimant.address %}
-    {% set correspondenceAddress = claim.claimData.claimant.correspondenceAddress %}
-    {% set contactPerson = claim.claimData.claimant.contactPerson %}
-
-  {% if address != null %}
-    {% set line1 = claim.claimData.claimant.address.line1 %}
-    {% set line2 = claim.claimData.claimant.address.line2 %}
-    {% set line3 = claim.claimData.claimant.address.line3 %}
-    {% set city = claim.claimData.claimant.address.city %}
-    {% set postcode = claim.claimData.claimant.address.postcode %}
-  {% endif %}
-
-  {% if correspondenceAddress != null %}
-    {% set correspondenceAddressLine1 = claim.claimData.claimant.correspondenceAddress.line1 %}
-    {% set correspondenceAddressLine2 = claim.claimData.claimant.correspondenceAddress.line2 %}
-    {% set correspondenceAddressLine3 = claim.claimData.claimant.correspondenceAddress.line3 %}
-    {% set correspondenceAddressCity = claim.claimData.claimant.correspondenceAddress.city %}
-    {% set correspondenceAddressPostcode = claim.claimData.claimant.correspondenceAddress.postcode %}
-  {% endif %}
+{% elif user.id === claim.defendantId %}
+  {% set otherParty = 'Claimant' %}
+  {% set otherPartyLowerCase = 'claimant' %}
+  {% set otherPartyName = claim.claimData.claimant.name %}
+  {% set phone = claim.claimData.claimant.mobilePhone %}
+  {% set email = claim.claimantEmail %}
+  {% set address = claim.claimData.claimant.address %}
+  {% set correspondenceAddress = claim.claimData.claimant.correspondenceAddress %}
+  {% set contactPerson = claim.claimData.claimant.contactPerson %}
 
 {% endif %}
 
@@ -70,83 +36,79 @@
         <span class="heading-secondary">{{ t(otherParty) }}</span>
         {{ otherPartyName }}
       </h1>
-      <div>
-        {% if address != null %}
+      <div class="notice">
+        {% if address %}
           <h2 class="heading-medium">{{ t('Address') }}</h2>
-          {% if line1 != null %}
-          {{ line1 }}
-        {% endif %}
+          {% if address.line1 %}
+            {{ address.line1 }}
+          {% endif %}
 
-        {% if line2 != null %}
-          <br>
-          {{ line2 }}
-        {% endif %}
+          {% if address.line2 %}
+            <br>
+            {{ address.line2 }}
+          {% endif %}
 
-        {% if line3 != null %}
-          <br>
-          {{ line3 }}
-        {% endif %}
+          {% if address.line3 %}
+            <br>
+            {{ address.line3 }}
+          {% endif %}
 
-        {% if city != null %}
-          <br>
-          {{ city }}
-        {% endif %}
+          {% if address.city %}
+            <br>
+            {{ address.city }}
+          {% endif %}
 
-        {% if postcode != null %}
-          <br>
-          {{ postcode }}
-        {% endif %}
+          {% if address.postcode %}
+            <br>
+            {{ address.postcode }}
+          {% endif %}
 
         {% endif %}
       </div>
 
 
-      {% if correspondenceAddress != null %}
-        <div>
+      {% if correspondenceAddress %}
+        <div class="notice">
           <h2 class="heading-medium">{{ t('Correspondence address') }}</h2>
-          {% if correspondenceAddressLine1 != null %}
-            {{ correspondenceAddressLine1 }}
+          {% if correspondenceAddress.line1 %}
+            {{ correspondenceAddress.line1 }}
           {% endif %}
 
-          {% if correspondenceAddressLine2 != null %}
+          {% if correspondenceAddress.line2 %}
             <br>
-            {{ correspondenceAddressLine2 }}
+            {{ correspondenceAddress.line2 }}
           {% endif %}
 
-          {% if correspondenceAddressLine3 != null %}
+          {% if correspondenceAddress.line3 %}
             <br>
-            {{ correspondenceAddressLine3 }}
+            {{ correspondenceAddress.line3 }}
           {% endif %}
 
-          {% if correspondenceAddressCity != null %}
+          {% if correspondenceAddress.city %}
             <br>
-            {{ correspondenceAddressCity }}
+            {{ correspondenceAddress.city }}
           {% endif %}
 
-          {% if correspondenceAddressPostcode != null %}
+          {% if correspondenceAddress.postcode %}
             <br>
-            {{ correspondenceAddressPostcode }}
-            <br>
+            {{ correspondenceAddress.postcode }}
           {% endif %}
         </div>
       {% endif %}
 
-      {% if phone != null %}
-        <br>
-        <div>
-          {{ t('Phone: ' ) + phone }}
+      <div>
+        {% if phone %}
+          <span class="block">{{ t('Phone: ' ) + phone }}</span>
+        {% endif %}
+
+        {% if email %}
+          <span class="block">{{ t('Email: <a href="mailto:{{ email }}">{{ email }}</a>', { email: email }) | safe }}</span>
+        {% endif %}
+
+        {% if contactPerson %}
+          <span class="block">{{ t('Contact person: ' + contactPerson) }}</span>
+        {% endif %}
       </div>
-      {% endif %}
-
-      {% if email != null %}
-        <p>
-          {{ t('Email: <a href="mailto:{{ email }}">{{ email }}</a>', { email: email }) | safe }}
-        </p>
-      {% endif %}
-
-      {% if contactPerson != null %}
-        {{ t('Contact person: ' + contactPerson) }}
-      {% endif %}
     </div>
 
 
