--- a/src/main/features/claimant-response/views/defendants-response.njk
+++ b/src/main/features/claimant-response/views/defendants-response.njk
@@ -1,6 +1,10 @@
 {% extends "layout.njk" %}
 
-{% set heading = 'The defendant’s response' %}
+{% if claim.response.responseType === ResponseType.PART_ADMISSION.value and page === 1 %}
+  {% set heading = 'How they want to pay' %}
+{% else %}
+  {% set heading = 'The defendant’s response' %}
+{% endif %}
 
 {% from "form.njk" import csrfProtection, submitButton, errorSummary %}
 {% from "./macro/paymentPlanTable.njk" import paymentPlanTable %}
@@ -8,16 +12,26 @@
 
 {% set defendantName = claim.claimData.defendant.name %}
 
-{% macro paymentIntentionFragment(paymentIntention) %}
+{% macro paymentIntentionFragment(amount, paymentIntention) %}
   {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-    {{ t('They’ve offered to pay you in full by {{ paymentDate }}.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
+    {% if amount %}
+      {{ t('They’ve offered to pay you {{ amount }} by {{ paymentDate }}.', { amount: amount | numeral, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
+    {% else %}
+      {{ t('They’ve offered to pay you this by {{ paymentDate }}.', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}
+    {% endif %}
   {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-    {{ t('They’ve offered to pay you in instalments.') }}
+    {% if amount %}
+      {{ t('They’ve offered to pay you {{ amount }} in instalments.', { amount: amount | numeral }) }}
+    {% else %}
+      {{ t('They’ve offered to pay you this in instalments.') }}
+    {% endif %}
   {% endif %}
 {% endmacro %}
 
-{% macro repaymentPlanBlock(repaymentPlan, paymentPlan) %}
-  <h2 class="heading-medium">{{ t('How they want to pay') }}</h2>
+{% macro repaymentPlanBlock(heading = 'How they want to pay', repaymentPlan, paymentPlan) %}
+  {% if heading %}
+    <h2 class="heading-medium">{{ t(heading) }}</h2>
+  {% endif %}
   <p>{{ t('The defendant suggested this repayment plan:') }}</p>
   {{ paymentPlanTable(
       instalmentAmount = repaymentPlan.instalmentAmount,
@@ -64,10 +78,22 @@
     <div class="column-two-thirds">
       {% if claim.response.responseType === ResponseType.FULL_ADMISSION.value %}
         <p>{{ t('{{ defendantName }} admits they owe all the money you’ve claimed.', { defendantName: defendantName }) }}</p>
-        <p>{{ paymentIntentionFragment(claim.response.paymentIntention) }}</p>
+        <p>
+          {{
+            paymentIntentionFragment(
+              amount = undefined,
+              paymentIntention = claim.response.paymentIntention
+            )
+          }}
+        </p>
 
         {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-          {{ repaymentPlanBlock(claim.response.paymentIntention.repaymentPlan, paymentPlan) }}
+          {{
+            repaymentPlanBlock(
+              repaymentPlan = claim.response.paymentIntention.repaymentPlan,
+              paymentPlan = paymentPlan
+            )
+          }}
         {% endif %}
 
         {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
@@ -78,14 +104,21 @@
       {% if claim.response.responseType === ResponseType.PART_ADMISSION.value %}
         {% if page === 0 %}
           <p>{{ t('{{ defendantName }} admits they owe you {{ amount }}. However they don’t believe they owe the full amount claimed.', { defendantName: defendantName, amount: claim.response.amount | numeral }) }}</p>
-          <p>{{ paymentIntentionFragment(claim.response.paymentIntention) }}</p>
+          <p>
+            {{
+              paymentIntentionFragment(
+                amount = undefined,
+                paymentIntention = claim.response.paymentIntention
+              )
+            }}
+          </p>
 
           <h2 class="heading-medium">{{ t('Their defence') }}</h2>
 
           <h3 class="heading-small form-group-related">{{ t('Why they don’t owe the amount claimed') }}</h3>
           <p>{{ t('"{{ defence }}"', { defence: claim.response.defence }) }}</p>
 
-          {% if claim.response.timeline %}
+          {% if claim.response.timeline and claim.response.timeline.rows.length > 0 %}
             <h3 class="heading-small form-group-related">{{ t('Their timeline of events') }}</h3>
             {{ timelineFragment(claim.response.timeline) }}
           {% endif %}
@@ -96,7 +129,20 @@
           {% endif %}
         {% elseif page === 1 %}
           {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-            {{ repaymentPlanBlock(claim.response.paymentIntention.repaymentPlan, paymentPlan) }}
+            {{
+              repaymentPlanBlock(
+                heading = '',
+                repaymentPlan = claim.response.paymentIntention.repaymentPlan,
+                paymentPlan = paymentPlan
+              )
+            }}
+          {% elseif claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+            {{
+              paymentIntentionFragment(
+                amount = claim.response.amount,
+                paymentIntention = claim.response.paymentIntention
+              )
+            }}
           {% endif %}
 
           {{ paymentDateExplanationBlock(claim.response.statementOfMeans.reason) }}
