--- a/src/main/features/claimant-response/views/choose-how-to-proceed.njk
+++ b/src/main/features/claimant-response/views/choose-how-to-proceed.njk
@@ -12,7 +12,11 @@
 
   <div class="grid-row">
     <div class="column-two-thirds">
-      <form method="post" class="analytics-submit-event-trigger" data-event-label-from="option" novalidate>
+      <form method="post"
+            data-event-action="Claimant: Choose how to proceed"
+            class="analytics-submit-event-trigger"
+            data-event-label-from="option"
+            novalidate>
         {{ csrfProtection(csrf) }}
 
         {% set name = 'option' %}
