--- a/src/main/features/claim/views/reason.njk
+++ b/src/main/features/claim/views/reason.njk
@@ -14,7 +14,7 @@
         <div class="form-group {% if error %} form-group-error {% endif %}">
           <label for="{{ name }}" id="{{ name }}[label]">
             <p class="form-label">
-              {{ t('Tell us why you believe the defendant owes you money.') }}
+              {{ t('Tell us why you believe {{ defendantName }} owes you money.') }}
             </p>
 
             <p>{{ t('Don’t give us a detailed timeline - we’ll ask for that later.') }}</p>
