--- a/src/main/features/claimant-response/views/sign-settlement-agreement.njk
+++ b/src/main/features/claimant-response/views/sign-settlement-agreement.njk
@@ -16,9 +16,9 @@
         {{ csrfProtection(csrf) }}
 
         {{ termsOfAgreement (
-          'termsOfAgreement',
-          claim.response,
-          paymentPlan
+          id = 'termsOfAgreement',
+          response = claim.response,
+          paymentPlan = paymentPlan
         ) }}
 
         <p>{{ t('This agreement settles the claim made by {{ claimantName }} against {{ defendantName }}. This includes all money owed in the claim, for example court fees, expenses or interest.',
