minor content changes
1. changed 'you are' to 'you're' on the claimant party selection page.
2. changed 'business' to organisation on some of the ineligibility pages, as is our standard.

--- a/src/main/features/claim/views/claimant-party-type-selection.njk
+++ b/src/main/features/claim/views/claimant-party-type-selection.njk
@@ -20,7 +20,7 @@
                 {
                   bold: true,
                   label: 'An individual',
-                  hint: 'You are claiming for yourself',
+                  hint: 'You’re claiming for yourself',
                   value: 'individual',
                   checked: (form.valueFor('type').value === 'individual')
                 },
