Remove dependency on cmc-common-frontend changes and simplify summary structure

--- a/src/main/features/response/views/claim-details.njk
+++ b/src/main/features/response/views/claim-details.njk
@@ -4,8 +4,7 @@
 
 {% from "form.njk" import csrfProtection %}
 {% from "amountBreakdown.njk" import amountBreakdownTable %}
-{% from "timelineSummary.njk" import timelineSummary %}
-{% from "evidenceSummary.njk" import evidenceSummary %}
+{% from "summaryTable.njk" import timelineSummary, evidenceSummary %}
 
 {% block content %}
   <div class="grid-row">
