--- a/src/main/features/response/views/claim-details.njk
+++ b/src/main/features/response/views/claim-details.njk
@@ -16,12 +16,12 @@
       <p><span class="bold-small">{{ t('Reason for claim') }}:</span></p>
       <p>{{ claim.claimData.reason }}</p>
 
-      <p><span class="bold-small">Timeline</span></p>
+      <p><span class="bold-small">{{ t('Timeline') }}</span></p>
       {{ timelineSummary(claim.claimData.timeline.getPopulatedRowsOnly()) }}
 
       {% set evidenceRows = claim.claimData.evidence.getPopulatedRowsOnly() %}
       {% if 0 < evidenceRows | length %}
-        <p><span class="bold-small">Evidence</span></p>
+        <p><span class="bold-small">{{ t('Evidence') }}</span></p>
         {{ evidenceSummary(evidenceRows) }}
       {% endif %}
 
