--- a/src/main/features/response/views/claim-details.njk
+++ b/src/main/features/response/views/claim-details.njk
@@ -16,13 +16,17 @@
       <p><span class="bold-small">{{ t('Reason for claim') }}:</span></p>
       <p>{{ claim.claimData.reason }}</p>
 
-      <p><span class="bold-small">{{ t('Timeline') }}</span></p>
-      {{ timelineSummary(claim.claimData.timeline.getPopulatedRowsOnly()) }}
+      <div class="form-group">
+        <p><span class="bold-small">{{ t('Timeline') }}</span></p>
+        {{ timelineSummary(claim.claimData.timeline.getPopulatedRowsOnly()) }}
+      </div>
 
       {% set evidenceRows = claim.claimData.evidence.getPopulatedRowsOnly() %}
       {% if 0 < evidenceRows | length %}
-        <p><span class="bold-small">{{ t('Evidence') }}</span></p>
-        {{ evidenceSummary(evidenceRows) }}
+        <div class="form-group">
+          <p><span class="bold-small">{{ t('Evidence') }}</span></p>
+          {{ evidenceSummary(evidenceRows) }}
+        </div>
       {% endif %}
 
       <p><span class="bold-small">{{ t('Download the claim') }}</span></p>
