Fix merge issues

--- a/src/main/features/response/components/payment-intention/payment-option.njk
+++ b/src/main/features/response/components/payment-intention/payment-option.njk
@@ -18,14 +18,6 @@
             novalidate>
         {{ csrfProtection(csrf) }}
 
-<<<<<<< HEAD
-
-
-
-=======
-        {% set nonImmediateHintText = 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.' %}
->>>>>>> master
-
         {{
         radioGroupWithHintPanel(
           form = form,
@@ -43,21 +35,13 @@
               label: DefendantPaymentType.BY_SET_DATE.displayValue,
               value: DefendantPaymentType.BY_SET_DATE.value,
               checked: (form.valueFor('option') === DefendantPaymentType.BY_SET_DATE),
-<<<<<<< HEAD
-              hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don't pay immediately.'
-=======
-              hint: nonImmediateHintText
+              hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.'
             },
->>>>>>> master
             {
               label: DefendantPaymentType.INSTALMENTS.displayValue,
               value: DefendantPaymentType.INSTALMENTS.value,
               checked: (form.valueFor('option') === DefendantPaymentType.INSTALMENTS),
-<<<<<<< HEAD
-              hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don't pay immediately.'
-=======
-              hint: nonImmediateHintText
->>>>>>> master
+              hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.'
             }
           ]
         )
