ROC-4026 Shortening of title on check and send pages (#718)

--- a/src/main/features/response/views/check-and-send.njk
+++ b/src/main/features/response/views/check-and-send.njk
@@ -8,7 +8,7 @@
 {% from "evidenceCheckAndSend.njk" import evidenceCheckAndSend %}
 {% from "./macro/check-and-send/admission.njk" import notImmediatePayment, whenWillYouPayRow %}
 
-{% set heading = 'Check your answers before submitting your response' %}
+{% set heading = 'Check your answers' %}
 
 {% block content %}
   <form novalidate method="post">
