--- a/src/main/features/response/components/payment-intention/payment-option.njk
+++ b/src/main/features/response/components/payment-intention/payment-option.njk
@@ -18,8 +18,6 @@
             novalidate>
         {{ csrfProtection(csrf) }}
 
-        {% set nonImmediateHintText = 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.' %}
-
         {{
         radioGroupWithHintPanel(
           form = form,
@@ -37,13 +35,13 @@
               label: DefendantPaymentType.BY_SET_DATE.displayValue,
               value: DefendantPaymentType.BY_SET_DATE.value,
               checked: (form.valueFor('option') === DefendantPaymentType.BY_SET_DATE),
-              hint: nonImmediateHintText
+              hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.'
             },
             {
               label: DefendantPaymentType.INSTALMENTS.displayValue,
               value: DefendantPaymentType.INSTALMENTS.value,
               checked: (form.valueFor('option') === DefendantPaymentType.INSTALMENTS),
-              hint: nonImmediateHintText
+              hint: 'The claimant can request a County Court Judgment (CCJ) against you if you don’t pay immediately.'
             }
           ]
         )
