--- a/src/main/views/macro/summaryTable.njk
+++ b/src/main/views/macro/summaryTable.njk
@@ -1,22 +1,30 @@
-{% from "table.njk" import row %}
-
-{% macro twoColumnHeadingRow(labelHeading, valueHeading, topBorder = false, bottomBorder = true) %}
-  <div class="{% if topBorder %}top-border{% else %}no-top-border{% endif %} {% if bottomBorder %}bottom-border{% else %}no-bottom-border{% endif %}">
-    <div class="column-one-quarter form-label-bold">{{ t(labelHeading) }}</div>
-    <div class="column-one-half form-label-bold">{{ t(valueHeading) }}</div>
-  </div>
-{% endmacro %}
 
 {% macro evidenceSummary(evidence) %}
-  {{ twoColumnHeadingRow(t('Type'), t('Description')) }}
-  {% for evidenceRow in evidence %}
-    {{ row(evidenceRow.type.displayValue, evidenceRow.description, false) }}
-  {% endfor %}
+  <table class="mobile-table">
+    <tr>
+      <th class="bold-small">{{ t('Type') }}</th>
+      <th class="bold-small">{{ t('Description') }}</th>
+    </tr>
+    {% for evidenceRow in evidence %}
+      <tr>
+        <td>{{ evidenceRow.type.displayValue }}</td>
+        <td>{{ evidenceRow.description }}</td>
+      </tr>
+    {% endfor %}
+  </table>
 {% endmacro %}
 
 {% macro timelineSummary(timeline) %}
-  {{ twoColumnHeadingRow(t('Date'), t('What happened')) }}
-  {% for timelineRow in timeline %}
-    {{ row(timelineRow.date, timelineRow.description, false) }}
-  {% endfor %}
+  <table class="mobile-table">
+    <tr>
+      <th class="bold-small">{{ t('Date') }}</th>
+      <th class="bold-small">{{ t('What happened') }}</th>
+    </tr>
+    {% for timelineRow in timeline %}
+      <tr>
+        <td>{{ timelineRow.date }}</td>
+        <td>{{ timelineRow.description }}</td>
+      </tr>
+    {% endfor %}
+  </table>
 {% endmacro %}
