--- a/src/main/common/components/task-list/incomplete-task-list.njk
+++ b/src/main/common/components/task-list/incomplete-task-list.njk
@@ -1,13 +1,11 @@
 {% extends "layout.njk" %}
 {% from "remainingTasksFragment.njk" import remainingTasksFragment  %}
 
-{% set heading = 'You need to complete all sections before you submit your response' %}
-
 {% block content %}
 
   {{
     remainingTasksFragment(
-      tasks = tasks,
+      tasks = taskList.remainingTasks,
       backLink = taskListUri
     )
   }}
