--- a/src/main/features/response/components/payment-intention/payment-plan.njk
+++ b/src/main/features/response/components/payment-intention/payment-plan.njk
@@ -64,7 +64,7 @@
       <div class="form-group">
         <fieldset>
           <legend class="visually-hidden">{{ t('When will you make the first payment') }}</legend>
-          {{ dateInput('firstPaymentDate', form, hint = 'For example, 12 03 2017', label = 'When will you make the first payment?') }}
+          {{ dateInput('firstPaymentDate', form, hint = t('For example, {{ nextMonth }}', { nextMonth: 'now' | addDays(30) | inputDate }), label = 'When will you make the first payment?') }}
         </fieldset>
       </div>
 
