--- a/src/main/features/claim/views/confirmation.njk
+++ b/src/main/features/claim/views/confirmation.njk
@@ -18,7 +18,7 @@
           <h1 class="bold-large">{{ claim.claimNumber }}</h1>
         </div>
         <p>
-          <span class="bold">{{ claim.issuedOn | date  }}</span>
+          <span class="bold">{{ claim.createdAt | date  }}</span>
         </p>
         <p class="receipt-download-container">
           <a href="{{ ClaimPaths.receiptReceiver.evaluateUri({ externalId: claim.externalId}) }}">
