--- a/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/claimRejected.njk
@@ -51,21 +51,36 @@
       + 'this is a form which you must complete to tell us more about the claim.',
       { defendantName: claim.claimData.defendant.name }) }}
   </p>
+  <p>{{ t('{{ defendantName }} has rejected your claim. You’ll have to go to a hearing to resolve it.',
+        { defendantName: claim.claimData.defendant.name }) }}</p>
+
+  <p>{{ t('You need to complete a <a href="{{ url }}">directions questionnaire form</a> to tell us more about the claim.',
+        { url: DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
+
+  <p>{{ t('Your claim will be cancelled if you don’t complete and return the form before 4pm on {{ deadline }}.',
+        { deadline: claim.respondedAt.add(19, 'days') | date }) }}</p>
+
   <p>
     {{ _downloadResponseLink(claim, 'Download their response') }}
   </p>
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationNOForDefendantDashboard() %}
-  {{ t('You’ve rejected the claim.') }}
+  {{ t('You’ve rejected the claim. You need to tell us more about the claim.') }}
 {% endmacro %}
 
 {% macro claimRejectedFreeMediationNOForDefendantClaimDetails(claim) %}
   <h2 class="heading-small">{{ t('Your response to the claim') }}</h2>
   <p>
-    {{ t('You have rejected the claim. We’ll send you a directions questionnaire – this is a form which you must '
-      + 'complete to tell us more about the claim.') }}
+    {{ t('You’ve rejected the claim and said you don’t want to use mediation to solve it. You’ll have to go to a hearing.') }}
   </p>
+
+  <p>{{ t('You need to complete a <a href="{{ url }}">directions questionnaire form</a> to tell us more about the claim.',
+        { url: DashboardPaths.directionsQuestionnairePage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
+
+  <p>{{ t('Your defence will be cancelled if you don’t complete and return the form before 4pm on {{ deadline }}.',
+        { deadline: claim.respondedAt.add(19, 'days') | date }) }}</p>
+
   <p>
     {{ _downloadResponseLink(claim, 'Download your response') }}
   </p>
