ROC-3619: fixing form

--- a/src/main/views/feature-opt-in.njk
+++ b/src/main/views/feature-opt-in.njk
@@ -15,6 +15,7 @@
       label = 'Do you want to try new features as we add them?',
       labelForScreenReadersOnly = true,
       name = 'consentResponse',
+      form = form,
       options = [
       {
       bold: false,
