default empty string when no description of evidence is given

--- a/src/main/views/macro/summaryTable.njk
+++ b/src/main/views/macro/summaryTable.njk
@@ -8,7 +8,7 @@
     {% for evidenceRow in evidence %}
       <tr>
         <td>{{ evidenceRow.type.displayValue }}</td>
-        <td>{{ evidenceRow.description }}</td>
+        <td>{{ evidenceRow.description | default('') }}</td>
       </tr>
     {% endfor %}
   </table>
