Import missing macro causing error when defendant declared unemployed

--- a/src/main/views/macro/financialDetails.njk
+++ b/src/main/views/macro/financialDetails.njk
@@ -1,4 +1,4 @@
-{% from "table.njk" import tableStart, tableEnd %}
+{% from "singularOrPlural.njk" import singularOrPlural %}
 
 {% macro heading(label) %}
   <h3 class="heading-small form-group-related">{{ t(label) }}</h3>
