--- a/src/main/features/response/views/statement-of-means/check-and-send.njk
+++ b/src/main/features/response/views/statement-of-means/check-and-send.njk
@@ -1,15 +1,5 @@
 {% from "table.njk" import tableStart, tableEnd, row %}
-
-{% macro singularOrPlural(value, noun) %}
-
-  {% set result =  value + ' ' + noun %}
-  {% if value > 1 %}
-    {% set result = result + 's' %}
-  {% endif %}
-
-  {{ result }}
-
-{% endmacro %}
+{% from "singularOrPlural.njk" import singularOrPlural %}
 
 {% macro employmentStatus(statementOfMeans) %}
 
